[package]
name = "tickets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.92"
dotenv = "0.15.0"
futures = "0.3"
env_logger = "0.10.0"
log = "0.4.17"

[dependencies.mongodb]
version = "2.3.1"
default-features = false
features = ["async-std-runtime"]